# agda-server

./: agda-server.cabal
src/: AgdaServer.hs
src/Agda/Interaction/: ServerInteractionProtocol.hs  ServerInteractionTop.hs
