Name:               agda-server
Description:        Provides a TCP server wrapper to the Agda interpreter.

Version:            0.0
Cabal-version:      >= 1.8
Build-type:         Simple

License:            AllRightsReserved
Copyright:          Will Jones
Homepage:           http://sacharissa.co.uk

Library
  Exposed-modules:  Agda.Interaction.ServerInteractionTop
  Build-depends:    Agda, aeson <= 0.6.2.1, base, scotty, text, containers, mtl, bytestring, vector, pretty, aeson-pretty
  Hs-source-dirs:   src

Executable agda-server
  Other-modules:    Agda.Interaction.ServerInteractionTop
  Build-depends:    Agda, aeson <= 0.6.2.1, base, scotty, text, containers, mtl, bytestring, vector, pretty, aeson-pretty

  Main-is:          AgdaServer.hs
  Hs-source-dirs:   src
  Ghc-options:      -main-is AgdaServer
